--- a/mantra_moveit_config/config/controllers.yaml
+++ b/mantra_moveit_config/config/controllers.yaml
@@ -1,5 +1,5 @@
 controller_list:
-  - name: ""
+  - name: "mantra"
     action_ns: follow_joint_trajectory
     type: FollowJointTrajectory
     default: true
