--- a/mantra_application/package.xml
+++ b/mantra_application/package.xml
@@ -84,12 +84,16 @@
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>velocity_controllers</exec_depend>
 
-  
-
+  <!-- easy_handeye -->
+  <exec_depend>rqt_gui</exec_depend>
+  <exec_depend>rqt_gui_py</exec_depend>
+  <exec_depend>moveit_commander</exec_depend>
+  <exec_depend>easy_handeye</exec_depend>
+  <exec_depend>rqt_easy_handeye</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- Other tools can request additional information be placed here -->
-
+    <!-- <rqt_gui plugin="${prefix}/plugin.xml"/> -->
   </export>
 </package>
