--- a/mantra_moveit_config/config/controllers.yaml
+++ b/mantra_moveit_config/config/controllers.yaml
@@ -11,3 +11,10 @@ controller_list:
       - joint5
       - joint6
       - joint7
+
+  - name: "mantra"
+    action_ns: gripper_command
+    type: GripperCommand
+    default: true
+    joints:
+      - ee_joint1
