--- a/mantra_moveit_config/config/controllers.yaml
+++ b/mantra_moveit_config/config/controllers.yaml
@@ -1,6 +1,6 @@
 controller_list:
-  - name: "mantra"
-    action_ns: follow_joint_trajectory
+  - name: mantra/arm
+    action_ns: ''
     type: FollowJointTrajectory
     default: true
     joints:
@@ -12,9 +12,9 @@ controller_list:
       - joint6
       - joint7
 
-  - name: "mantra"
-    action_ns: gripper_command
-    type: GripperCommand
-    default: true
-    joints:
-      - ee_joint1
+  # - name: "mantra"
+  #   action_ns: gripper_command
+  #   type: GripperCommand
+  #   default: true
+  #   joints:
+  #     - ee_joint
