--- a/mantra_application/package.xml
+++ b/mantra_application/package.xml
@@ -53,8 +53,11 @@
   <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
   <!-- <exec_depend>warehouse_ros_mongo</exec_depend> -->
   <build_depend>mantra_description</build_depend>
+  <build_depend>message_generation</build_depend>
   <exec_depend>mantra_description</exec_depend>
 
+  <exec_depend>message_runtime</exec_depend>
+  
   <exec_depend>moveit_ros_move_group</exec_depend>
   <exec_depend>moveit_fake_controller_manager</exec_depend>
   <exec_depend>moveit_kinematics</exec_depend>
