use mantra move service in hmi

--- a/mantra_application/CMakeLists.txt
+++ b/mantra_application/CMakeLists.txt
@@ -58,6 +58,8 @@ find_package(catkin REQUIRED COMPONENTS
 add_service_files(
   FILES
   MoveToPoseNamed.srv
+  MoveToJointStates.srv
+  SetVelScaling.srv
 )
 
 ## Generate actions in the 'action' folder
@@ -146,9 +148,9 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-target_link_libraries(mantra_application
-  ${catkin_LIBRARIES}
-)
+# target_link_libraries(mantra_application
+#   ${catkin_LIBRARIES}
+# )
 
 #############
 ## Install ##
