--- a/mantra_application/CMakeLists.txt
+++ b/mantra_application/CMakeLists.txt
@@ -61,6 +61,7 @@ add_service_files(
   MoveToJointStates.srv
   MoveToPoseShift.srv
   GetCurrentPose.srv
+  GetBaseEELink.srv
   SetVelScaling.srv
 )
 
