could run tsdf fusion now

--- a/mantra_application/CMakeLists.txt
+++ b/mantra_application/CMakeLists.txt
@@ -58,6 +58,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_service_files(
   FILES
   MoveToPoseNamed.srv
+  MoveToPosesNamed.srv
   MoveToJointStates.srv
   MoveToPoseShift.srv
   GetCurrentPose.srv
