trajectory record and interpolation

--- a/mantra_application/CMakeLists.txt
+++ b/mantra_application/CMakeLists.txt
@@ -61,6 +61,7 @@ add_service_files(
   MoveToPosesNamed.srv
   MoveToJointStates.srv
   MoveToPoseShift.srv
+  MoveEEZ.srv
   GetCurrentPose.srv
   GetBaseEELink.srv
   SetVelScaling.srv
