--- a/yinshi_driver/CMakeLists.txt
+++ b/yinshi_driver/CMakeLists.txt
@@ -139,6 +139,10 @@ add_executable(yinshi_driver src/main.cpp
         src/yinshi_driver.cpp
         )
 
+# Most behind add_executable!!!!!!!!!!!
+# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(yinshi_driver ${PROJECT_NAME}_generate_messages_cpp)
+
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
 ## target back to the shorter version for ease of user use
